Start of rewriting the Arduino library

--- a/fw/.vscode/settings.json
+++ b/fw/.vscode/settings.json
@@ -1,3 +1,14 @@
 {
-    "idf.adapterTargetName": "esp32s3"
+    "idf.adapterTargetName": "esp32s3",
+    "files.associations": {
+        "mfrc522.h": "c",
+        "cstdint": "c",
+        "optional": "c",
+        "system_error": "c",
+        "array": "c",
+        "functional": "c",
+        "tuple": "c",
+        "type_traits": "c",
+        "utility": "c"
+    }
 }
